--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -32,16 +32,16 @@ html, body, section, article, h1, h2, p, a, button, ul {
     --main-font-color: white;
     --secondary-bg-color: white;
     --secondary-font-color: rgb(14, 60, 94);
+    --alternative-bg-color: rgba(255, 255, 255, 0.6);
     --button-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
     --title-font-size: clamp(3rem, 2.8519rem + 0.7407vw, 3.5rem);
     --choose-font-size: clamp(2.2rem, 2.0571rem + 0.7143vw, 2.7rem);
     --question-font-size: clamp(1.7rem, 1.486rem + 0.571vw, 2rem);
     --country-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
+    --high-score-btn-font-size: clamp(1.1rem, 1.0429rem + 0.2857vw, 1.3rem);
     --high-score-title-font-size: clamp(1.5rem, 1.4429rem + 0.2857vw, 1.7rem);
     --high-score-font-size: clamp(1.4rem, 1.3429rem + 0.2857vw, 1.6rem);
     --utilities-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
-    /* --light-grey: rgb(240, 240, 240);
-    --ocean: rgb(86, 179, 220); */
     --orange: #FF9671;
     --violet: #845EC2;
     --peach: #F7C8A8;
