--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,6 @@
   opacity: 0;
 }
 
-.mapboxgl-canvas-container.mapboxgl-interactive {
-  cursor: default;
-}
-
 .animate-appear-map {
   animation: appear .2s forwards;
 }
@@ -51,7 +47,7 @@
   animation: appear 1s forwards;
 }
 
-@media screen and (min-width: 415px ) {
+@media screen and (min-width: 415px) {
   .howToPlayCanvas {
     width: 25rem;
     height: 25rem;
@@ -83,8 +79,8 @@
   cursor: pointer;
   border: 1px solid var(--main-font-color);
   border-radius: 2rem;
-  box-shadow: 2px 2px 7px var(--main-font-color) inset, 
-  4px 4px 15px var(--primary-color);
+  box-shadow: 2px 2px 7px var(--main-font-color) inset,
+    4px 4px 15px var(--primary-color);
   opacity: 0;
   animation: appear 1s 3s forwards;
 }
@@ -190,7 +186,7 @@
   position: absolute;
   top: 12vh;
   z-index: 1;
-  display: flex; 
+  display: flex;
 }
 
 .correct {
@@ -198,7 +194,7 @@
   display: inline-block;
   width: 2rem;
   height: 2rem;
-  filter: drop-shadow( 0 0 10px var(--primary-color));
+  filter: drop-shadow(0 0 10px var(--primary-color));
   animation: bump 1s ease-in-out;
 }
 
@@ -207,7 +203,7 @@
   display: inline-block;
   width: 2rem;
   height: 2rem;
-  filter: drop-shadow( 0 0 10px var(--primary-color));
+  filter: drop-shadow(0 0 10px var(--primary-color));
   animation: bump 1s ease-in-out;
 }
 
@@ -276,8 +272,8 @@
   cursor: pointer;
   padding: .7rem 2rem;
   border-radius: 2rem;
-  box-shadow: 2px 2px 10px var(--main-font-color) inset, 
-  4px 4px 15px var(--primary-color);
+  box-shadow: 2px 2px 10px var(--main-font-color) inset,
+    4px 4px 15px var(--primary-color);
   opacity: 0;
   animation: appear 1s ease-in forwards;
 }
@@ -322,8 +318,8 @@
   background-color: var(--main-font-color);
   border: 1px solid var(--primary-color);
   border-radius: 50%;
-  box-shadow: 30px 30px 80px var(--primary-color) inset, 
-  10px 10px 30px var(--main-font-color);
+  box-shadow: 30px 30px 80px var(--primary-color) inset,
+    10px 10px 30px var(--main-font-color);
   padding: 2rem;
   color: var(--primary-color);
   text-align: center;
@@ -335,7 +331,7 @@
   animation: appear 1s forwards;
 }
 
-@media screen and (min-width: 415px ) {
+@media screen and (min-width: 415px) {
   .highScoresCanvas {
     width: 25rem;
     height: 25rem;
@@ -347,14 +343,14 @@
   font-size: var(--high-score-title-font-size);
   font-weight: bold;
   text-transform: uppercase;
-  filter: drop-shadow( 0 0 10px var(--main-font-color));
+  filter: drop-shadow(0 0 10px var(--main-font-color));
 }
 
 .score {
   font-size: var(--high-score-font-size);
   font-weight: bold;
   text-transform: uppercase;
-  filter: drop-shadow( 0 0 .5px var(--primary-color));
+  filter: drop-shadow(0 0 .5px var(--primary-color));
 }
 
 .scoreEurope {
@@ -364,9 +360,11 @@
 .scoreAsia {
   color: var(--fuchsia)
 }
+
 .scoreAfrica {
   color: var(--yellow)
 }
+
 .scoreAmericas {
   color: var(--orange)
 }
@@ -378,8 +376,8 @@
   cursor: pointer;
   border: 2px solid var(--primary-color);
   border-radius: 2rem;
-  box-shadow: 2px 2px 5px var(--primary-color) inset, 
-  4px 4px 15px var(--primary-color);
+  box-shadow: 2px 2px 5px var(--primary-color) inset,
+    4px 4px 15px var(--primary-color);
   font-size: var(--high-score-font-size);
   font-weight: bold;
 }
@@ -387,7 +385,33 @@
 .highScoresOkay:hover {
   color: var(--main-font-color);
   background-color: var(--primary-color-hover);
-  box-shadow: 2px 2px 5px var(--main-font-color) inset, 
-  5px 5px 15px var(--primary-color);
+  box-shadow: 2px 2px 5px var(--main-font-color) inset,
+    5px 5px 15px var(--primary-color);
   border: 2px solid var(--main-font-color)
+}
+
+/* ----- mapbox gl modifications ----  */
+
+.mapboxgl-canvas-container.mapboxgl-interactive {
+  cursor: default;
+}
+
+.mapboxgl-popup-tip {
+  border: none;
+}
+
+.mapboxgl-popup-content {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  padding: 0;
+  color: var(--primary-color);
+  font-family: var(--main-font-family);
+  filter: drop-shadow(3px 3px 30px white);
+  font-weight: bold;
+  font-size: var(--popup-font-size);
+}
+
+.mapboxgl-popup-close-button {
+  display: none;
 }
