--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -2,8 +2,6 @@
 
 html, body, section, article, h1, h2, p, a, button, ul {
     margin: 0;
-    /* margin-block-start: 0;
-    margin-block-end: 0; */
     border: 0;
     padding: 0;
     outline: 0;
@@ -70,26 +68,37 @@ html, body, section, article, h1, h2, p, a, button, ul {
   .preMap {
     position: absolute;
     align-self: center;
-    width: 50vh;
-    height: 50vh;
+    width: 32rem;
+    height: 32rem;
     background-color: white;
     border-radius: 50%;
-    animation: scaleCircle .8s ease-in forwards;
-    
+    animation: scaleCircle 1.5s ease-in forwards;
+    opacity: 0;
+    overflow: hidden;
+  }
+
+  /* the size of the circle is calculated from the map's size depending on zoomm levels */
+  @media screen and (min-width: 415px) {
+    .preMap {
+      width: 90rem;
+      height: 90rem;
+    }
+  }
+  @media screen and (min-width: 800px) {
+    .preMap {
+      width: 104rem;
+      height: 104rem;
+    }
   }
 
   @keyframes scaleCircle {
     0% {
       opacity: 0;
-      transform: scale(1,1);
+      transform: scale(0.8, 0.8);
     }
-    /* 70% {
-      opacity: .5;
-      transform: scale(1.2, 1.2)
-    } */
     100% {
       opacity: .9;
-      transform: scale(1.2, 1.2)
+      transform: scale(1,1)
     }
     
   }
