--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,12 @@
   animation: appear 1s 2s forwards;
 }
 
+.fourthRule {
+  margin: .5rem 0;
+  opacity: 0;
+  animation: appear 1s 3s forwards;
+}
+
 .okay {
   margin: 1.5rem;
   padding: 0.5rem 1.5rem;
@@ -88,7 +94,7 @@
   box-shadow: 2px 2px 7px var(--main-font-color) inset,
     4px 4px 15px var(--primary-color);
   opacity: 0;
-  animation: appear 1s 3s forwards;
+  animation: appear 1s 4s forwards;
 }
 
 .fast {
