--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -48,8 +48,8 @@ html, body, section, article, h1, h2, p, a, button, ul {
     --pink: #f475b4;
     --magenta: #D65DB1;
     --yellow: #FFC75F;
-    --correct: #2cf32c;
-    --incorrect: #ff0000;
+    --correct: #00D700;
+    --incorrect: #D60000;
   }
   
   html {
